Segfault in nautilus_files_view_set_selection
On nautilus-44.2.1
:
Steps to reproduce:
Not sure about the steps to reproduce the crash. But I was doing "Search", doing a copy and traversing the view with Alt + <-
and Alt + ->
Thread 1 (Thread 0x7f9b4485f040 (LWP 680202)):
#0 g_type_check_instance_is_fundamentally_a (type_instance=type_instance@entry=0x56526e08d5b0, fundamental_type=fundamental_type@entry=0x50 [GObject]) at ../../../gobject/gtype.c:4166
#1 0x00007f9b46a84efe in g_object_ref (_object=0x56526e08d5b0) at ../../../gobject/gobject.c:3775
#2 0x00007f9b476fec6b in g_list_copy_deep (list=list@entry=0x56526b6a1950 = {...}, func=0x7f9b46a84ef0 <g_object_ref>, user_data=user_data@entry=0x0) at ../../../glib/glist.c:764
#3 0x0000565266ce3651 in nautilus_files_view_set_selection (nautilus_files_view=<optimized out>, selection=0x56526b6a1950 = {...}) at ../src/nautilus-files-view.c:3263
#4 0x0000565266c87a59 in load_new_location (self=0x56526851a310 [NautilusWindowSlot], location=<optimized out>, selection=0x56526b6a1950 = {...}, file_to_activate=0x0, tell_current_content_view=<optimized out>, tell_new_content_view=<optimized out>) at ../src/nautilus-window-slot.c:2077
#5 0x0000565266c89e18 in setup_view (self=self@entry=0x56526851a310 [NautilusWindowSlot], view=view@entry=0x56526de47090) at ../src/nautilus-window-slot.c:2010
#6 0x0000565266c8a55a in got_file_info_for_view_selection_callback (file=0x56526aba7e90 [NautilusVFSFile], callback_data=0x56526851a310) at ../src/nautilus-window-slot.c:1869
#7 0x0000565266d07ab2 in call_ready_callbacks_at_idle (callback_data=0x56526b4992c0) at ../src/nautilus-directory-async.c:2010
#8 0x00007f9b477034c9 in g_main_dispatch (context=0x565267ca2a00) at ../../../glib/gmain.c:3460
#9 g_main_context_dispatch (context=context@entry=0x565267ca2a00) at ../../../glib/gmain.c:4200
#10 0x00007f9b477038e8 in g_main_context_iterate (context=context@entry=0x565267ca2a00, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../../../glib/gmain.c:4276
#11 0x00007f9b4770397c in g_main_context_iteration (context=context@entry=0x565267ca2a00, may_block=may_block@entry=1) at ../../../glib/gmain.c:4343
#12 0x00007f9b46baa34d in g_application_run (application=application@entry=0x565267c8d410 [NautilusApplication], argc=argc@entry=2, argv=argv@entry=0x7fff88e70678) at ../../../gio/gapplication.c:2573
#13 0x0000565266c7878b in main (argc=2, argv=0x7fff88e70678) at ../src/nautilus-main.c:81
Edited by Sid